--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,5 +21,14 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
+    App\Utils\Interfaces\CacheInterface:
+        # You may change the cache adapter with a new class here
+        class: 'App\Utils\FilesCache'
+        # Pass as arguments the required parameters of the root directory
+        # of the Sf project and the current environment
+        arguments:
+            $projectDir: '%kernel.project_dir%'
+            $env: '%kernel.environment%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
