--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=4073b7f06e36068408f25c0956a4a56a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:QTkq81vE@127.0.0.1:3307/casino_game_lobby?serverVersion=8.0"
+ DATABASE_URL="mysql://root:secret@database:3306/casino_game_lobby?serverVersion=8.0"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
