--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.8'
 
 services:
+  database:
+    container_name: database
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: casino_game_lobby
+      MYSQL_USER: symfony
+      MYSQL_PASSWORD: symfony
+    ports:
+      - '4306:3306'
+    volumes:
+      - ./mysql:/var/lib/mysql
 
   php:
     container_name: php
@@ -10,7 +23,8 @@ services:
       - '9000:9000'
     volumes:
       - ./:/var/www/casino_game_lobby
-
+    depends_on:
+        - database
   nginx:
     container_name: nginx
     image: nginx:stable-alpine
@@ -21,3 +35,4 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+      - database
